--- a/pom.xml
+++ b/pom.xml
@@ -83,12 +83,12 @@
 	    <repository>
 	      <id>nexus</id>
 	      <name>Mithun Technologies Releases Nexus Repository</name>
-	      <url>http://localhost:8081/repository/relesses1/</url>
+	      <url>http://http://localhost:8081/repository/sep3/</url>
 	    </repository>
 	    <snapshotRepository>
 	      <id>nexus</id>
 	      <name>Mithun Technologies Snapshot Nexus Repository </name>
-	     <url>http://localhost:8081/repository/snapshotss1/</url>
+	     <url>http://http://localhost:8081/repository/sep3snapshot/</url>
 	    </snapshotRepository>
 	</distributionManagement>
 	
