--- a/pom.xml
+++ b/pom.xml
@@ -6,8 +6,8 @@
   <groupId>com.mt</groupId>
   <artifactId>maven-web-project</artifactId>
   <packaging>war</packaging>
-  <version>1.0-SNAPSHOT</version>
-  <name>Maven Web Project 22nd April</name>
+  <version>1.0.3-RELEASE</version>
+  <name>Maven Web Project 22 aug</name>
   <description>Maven Web Project for Java</description>
 
  <organization>
@@ -78,21 +78,21 @@
 			<version>${spring.version}</version>
 		</dependency>
   </dependencies>
+ 
+ <distributionManagement>
+     <repository>
+       <id>jfrog</id>
+       <name>DESKTOP-LBTFORN-releases</name>
+       <url>http://localhost:8089/artifactory/mven</url>
+     </repository>
+     <snapshotRepository>
+       <id>nexus</id>
+       <name>DESKTOP-LBTFORN-snapshots </name>
+       <url>http://localhost:8089/artifactory/mven</url>
+     </snapshotRepository>
+   </distributionManagement>
 
-	<distributionManagement>
-	    <repository>
-	      <id>nexus</id>
-	      <name>Mithun Technologies Releases Nexus Repository</name>
-	      <url>http://http://localhost:8081/repository/sep3/</url>
-	    </repository>
-	    <snapshotRepository>
-	      <id>nexus</id>
-	      <name>Mithun Technologies Snapshot Nexus Repository </name>
-	     <url>http://http://localhost:8081/repository/sep3snapshot/</url>
-	    </snapshotRepository>
-	</distributionManagement>
-	
-	
+ 
   <build>
     <plugins>
       <plugin>
@@ -157,3 +157,4 @@
     </profile>
   </profiles>
 </project>
+
